--- a/frontend/web/uw/sass/renovation.scss
+++ b/frontend/web/uw/sass/renovation.scss
@@ -5,13 +5,14 @@
 	}
 	
 	h1 {
-		text-align: center;
-		font-family: "Proxima Nova", sans-serif;
-		font-size: 37px;
-		text-transform: uppercase;
 		margin-top: 25px;
-		margin-bottom: 19px;
+		margin-bottom: 50px;
+		font: 60px "Proxima Nova Regular", sans-serif;
 		line-height: 39px;
+		font-weight: bold;
+		color: #3B0F50;
+		text-transform: uppercase;
+		text-align: center;
 		letter-spacing: 1px;
 		@media screen and (max-width: 1000px) {
 			font-size: 30px;
@@ -22,8 +23,8 @@
 	}
 	h1 span {
 		display: block;
-		margin-bottom: 5px;
-		font-size: 1.4em;
+		margin-top: 20px;
+		font-size: 40px;
 	}
 	.top_text {
 		font-size: 18px;
