--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -9,17 +9,19 @@
 	}
 	
 	h1 {
-		text-align: center;
-		font: 55px 'Proxima Nova', sans-serif;
-		color: #3B0F50;
-		text-transform: uppercase;
 		margin-top: 25px;
 		margin-bottom: 50px;
+		font: 60px "Proxima Nova Regular", sans-serif;
 		line-height: 39px;
+		font-weight: bold;
+		color: #3B0F50;
+		text-transform: uppercase;
+		text-align: center;
+		letter-spacing: 1px;
 		span {
 			display: block;
-			margin-top: 10px;
-			font-size: 0.6em;
+			margin-top: 20px;
+			font-size: 40px;
 		}
 			@media screen and (max-width: 1000px) {
 				font-size: 22px;
