--- a/frontend/web/uw/sass/header.scss
+++ b/frontend/web/uw/sass/header.scss
@@ -4,8 +4,11 @@
 	height: 66px;
 	box-shadow: 0 5px 43px 0 rgba(10,9,9,.14);
     z-index: 2;
-	@media screen and (max-width: 999px) {
+	@media screen and (max-width: 1099px) {
 		height: 66px;
+	}
+	.container_inner {
+		width: 1050px;
 	}
 	.logo {
 		float: left;
@@ -19,13 +22,14 @@
 	ul {
 		padding: 0px;
 		margin: 0px;
+		display: -webkit-flex;
 		display: flex;
 		list-style: none;
 		justify-content: space-between;
 		@media screen and (max-width: 1200px) {
 			padding-left: 44px;
 		}
-		@media screen and (max-width: 999px) {
+		@media screen and (max-width: 1099px) {
 			position: absolute;
 			top: 66px;
 			left: 0px;
@@ -41,7 +45,7 @@
 		}
 		li {
 			line-height: 66px;
-			@media screen and (max-width: 999px) {
+			@media screen and (max-width: 1099px) {
 				line-height: 60px;
 			    display: block;
 			    width: 100%;
@@ -73,7 +77,7 @@
 		&.active,&:hover {
 			color: #003878;
 		}
-	    @media screen and (max-width: 999px) {
+	    @media screen and (max-width: 1099px) {
 		    display: block;
 		}
 	}
@@ -82,7 +86,7 @@
 		position: absolute;
 	    right: 21px;
 	    top: 21px;
-		@media screen and (max-width: 999px) {
+		@media screen and (max-width: 1099px) {
 			display: block;
 		}
 		.open-menu-btn {
@@ -154,13 +158,12 @@
 @media screen and (max-width: 1200px) {
 	.header .container_inner {
 		width: calc(100% - 170px);
-		max-width: 850px;
 		ul {
 			padding-left: 0;
 		}
 	}
 }
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1099px) {
 	.header .container_inner {
 		width: 100%;
 		max-width: inherit;
@@ -173,8 +176,7 @@
 	.header ul a {
 		display: inline-block;
 		vertical-align: middle;
-		width: 100px;
 		line-height: normal;
-		text-align: center;
+		white-space: nowrap;
 	}
 }
